--- a/backend/templates/feed.html
+++ b/backend/templates/feed.html
@@ -11,21 +11,17 @@
 </author>
 {% for entry in entries %}
 <entry>
-	<id>{{ entry.key }}</id>
-        {% if entry.title  %}
-               <!-- {% ifequal entry.title "null" %}
-	                <title>Instaright article from domain: {{ entry.domain }} </title>
-                {% endifequal %}
-                -->
-        <title>{{ entry.title|escape }}</title>
+	<id>{{ entry.0 }}</id>
+        {% if entry.1 %}
+        <title>{{ entry.1|escape }}</title>
         {% else %}
-	<title>Instaright article from domain: {{ entry.domain }} </title>
+	<title>Instaright article from domain: {{ entry.2 }} </title>
         {% endif %} 
-	<link href="http://instaright.appspot.com/article/{{ entry.key }}" />
-	<updated>{{ entry.date|date:"Y-m-d\TH:i:s\Z" }}</updated>
-	<summary>{{ entry.domain }}</summary>
-	<domain>{{ entry.domain }}</domain>
-        <avatar>{{ entry.avatar }}</avatar>
+	<link href="{{ entry.3 }}" />
+	<updated>{{ entry.5|date:"Y-m-d\TH:i:s\Z" }}</updated>
+	<summary>{{ entry.2 }}</summary>
+	<domain>{{ entry.2 }}</domain>
+        <avatar>{{ entry.4 }}</avatar>
 </entry>
 {% endfor %}
 </feed>
