category view,domain view unificated view

--- a/backend/templates/article.html
+++ b/backend/templates/article.html
@@ -85,7 +85,7 @@
 						<div class="avatar_div"><img src="{{ story_avatar }}" class="avatar" alt="Instaright User {{ story_user }} avatar" /></div>
 						<p><a class="stream-article" title="{{ title }}" href="{{ link }}" target="_new">{{ title }}</a></p>
 						<br/>
-						<a class="stream-article" href="http://{{ domain }}" target="_new">{{ domain }}</a>
+						<a class="stream-article" href="{{ dd }}" target="_new">{{ domain }}</a>
 						<br />
 						{% if category %}
 						<div class="category_div">{{ category }}</div>
