--- a/backend/templates/domain.html
+++ b/backend/templates/domain.html
@@ -357,6 +357,11 @@ var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
 </script>
 <!-- End GETSATISFACTION -->
 <!-- Google Website Optimizer Tracking Script -->
+		<noscript>
+			<h1>Instaright {{ domain }} Article Stream </h1>
+			<h2>Check out Instaright articles about {{ domain }}</h2>
+			<h3>Looking for more to read? Take a look at <a href="http://www.instaright.com/category/{{ domain }}/feed?out=json" title="Instaright Articles about {{ domain }}">Instaright articles from {{ domain }}</a></h3>
+		</noscript>
 <script type="text/javascript">
         if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
                         (document.location.protocol=='https:'?'s://ssl':'://www')+
